fixed login/logout cards to centered & fixed added overflow

--- a/client/src/components/CardList/cardList.css
+++ b/client/src/components/CardList/cardList.css
@@ -5,3 +5,15 @@
 .fa-x:hover {
     color:white;
 }
+
+#card-content{
+    flex-wrap: wrap;
+}
+
+#study-card {
+    width: 100%;
+    height: 200px;
+    overflow: auto;
+    position: relative;     
+    word-break: break-word;
+}
